@@ -1,3 +1,6 @@
+06/03/2009
+- fixed repeat at block plugins
+
 05/25/2009
 - fixed problem with caching of compiler plugins
 
